# interop

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  README.md  _core_tests_8cs.html  _core_tests_8py.html  _corrected_intensity_metrics_test_8cs.html  _dep_tests_8py.html  _dependency_test_8cs.html  _error_metrics_test_8cs.html  _example1_8cs.html  _example2_8cs.html  _example3_8cs.html  _extended_tile_metrics_test_8cs.html  _extraction_metrics_test_8cs.html  _image_metrics_test_8cs.html  _imaging_example_8cs.html  _imaging_table_logic_8cs.html  _index_metrics_test_8cs.html  _index_summary_logic_8cs.html  _performance_test_8cs.html  _plot_data_by_cycle_test_8cs.html  _plot_data_by_lane_test_8cs.html  _plot_flowcell_map_8cs.html  _plot_q_score_heatmap_8cs.html  _plot_q_score_histogram_8cs.html  _plot_sample_q_c_8cs.html  _program_8cs.html  _q_metrics_test_8cs.html  _r_e_a_d_m_e_8md.html  _run_info_test_8cs.html  _run_metrics_test_8cs.html  _run_parameters_test_8cs.html  _summary_example_8cs.html  _test_suite_8cs.html  _tile_metrics_test_8cs.html  abstract__metric__format_8h.html  abstract__metric__format_8h_source.html  abstract__regression__test__generator_8h.html  (+1770 more)
docs/: CMakeLists.txt  Doxyfile.in
docs/src/: PythonIntroTutorial.ipynb  Tutorial_01_Intro.ipynb  Tutorial_02_Plot_Bar.ipynb  Tutorial_03_Low_Level.ipynb  Tutorial_04_Indexing_Metrics.ipynb  Tutorial_05_Imaging_Table.ipynb  apps.md  binary_formats.md  calculated_metrics.md  changes.md  contribute.md  example1.md  example2.md  example3.md  example4.md  example_imaging.md  example_sav_analysis.md  example_summary.md  index.md  install.md  j_example.md  performance.md  python_binding.md
docs/theme/: DoxygenLayout.xml  customdoxygen.css  doxy-boot.js  footer.html  header.html
src/apps/: CMakeLists.txt  aggregate.cpp  cyclesim.cpp  dumpbin.cpp  dumptext.cpp  imaging_table.cpp  index_summary.cpp  interop2csv.cpp  plot_by_cycle.cpp  plot_by_lane.cpp  plot_flowcell.cpp  plot_qscore_heatmap.cpp  plot_qscore_histogram.cpp  plot_sample_qc.cpp  simulator.cpp  summary.cpp
src/apps/inc/: application.h  plot_options.h
src/examples/: CMakeLists.txt  example1.cpp  example2.cpp  example3.cpp  example4.cpp  example_populate_qmetricset.cpp  example_q_metric.cpp
src/examples/csharp/: CMakeLists.txt  Example1.cs  Example2.cs  Example3.cs  ImagingExample.cs  SummaryExample.cs
src/examples/python/: summary.py
src/ext/: CMakeLists.txt
src/ext/csharp/: AssemblyInfo.cs.in  CMakeLists.txt  package.nuspec.in  package.targets
src/ext/python/: CMakeLists.txt  __init__.py.in  __main__.py.in  core.py  setup.py.in
src/ext/swig/: comm.i  imaging.i  interop.i  metrics.i  plot.i  run.i  run_metrics.i  summary.i  table.i
src/ext/swig/arrays/: arrays_csharp_impl.i  arrays_impl.i  arrays_java_impl.i  arrays_numpy_impl.i  numpy.i
src/ext/swig/exceptions/: exceptions_csharp.i  exceptions_impl.i
src/ext/swig/extends/: extends_csharp.i  extends_impl.i
src/ext/swig/util/: operator_overload.i
src/interop/: CMakeLists.txt
src/interop/logic/metric/: dynamic_phasing_metric.cpp  dynamic_phasing_metric.cpp.cpp  extended_tile_metric.cpp  extraction_metric.cpp  index_metric.cpp  q_metric.cpp
src/interop/logic/plot/: plot_by_cycle.cpp  plot_by_lane.cpp  plot_flowcell_map.cpp  plot_metric_list.cpp  plot_qscore_heatmap.cpp  plot_qscore_histogram.cpp  plot_sample_qc.cpp
src/interop/logic/summary/: index_summary.cpp  run_summary.cpp
src/interop/logic/table/: create_imaging_table.cpp  create_imaging_table_columns.cpp
src/interop/logic/utils/: metrics_to_load.cpp
src/interop/model/: run_metrics.cpp  run_metrics_helper.cpp
src/interop/model/metrics/: corrected_intensity_metric.cpp  dynamic_phasing_metric.cpp  error_metric.cpp  extended_tile_metric.cpp  extraction_metric.cpp  image_metric.cpp  index_metric.cpp  phasing_metric.cpp  q_collapsed_metric.cpp  q_metric.cpp  summary_run_metric.cpp  tile_metric.cpp
src/interop/model/run/: info.cpp  parameters.cpp
src/interop/model/summary/: index_summary.cpp  run_summary.cpp
src/interop/util/: filesystem.cpp  time.cpp
src/tests/: CMakeLists.txt
src/tests/csharp/: CMakeLists.txt  CoreTests.cs  Program.cs  TestSuite.cs
src/tests/csharp/logic/: DependencyTest.cs  ExceptionTest.cs  ImagingTableLogic.cs  IndexSummaryLogic.cs  PlotDataByCycleTest.cs  PlotDataByLaneTest.cs  PlotFlowcellMap.cs  PlotQScoreHeatmap.cs  PlotQScoreHistogram.cs  PlotSampleQC.cs
src/tests/csharp/metrics/: CorrectedIntensityMetricsTest.cs  ErrorMetricsTest.cs  ExtendedTileMetricsTest.cs  ExtractionMetricsTest.cs  ImageMetricsTest.cs  IndexMetricsTest.cs  PerformanceTest.cs  QMetricsTest.cs  RunMetricsTest.cs  TileMetricsTest.cs
src/tests/csharp/run/: RunInfoTest.cs  RunParametersTest.cs
src/tests/interop/: CMakeLists.txt  unit_tests.cpp
src/tests/interop/inc/: abstract_regression_test_generator.h  failure_listener.h  generic_fixture.h  persistent_parameter_generator.h  proxy_parameter_generator.h  regression_fixture.h  regression_test_data.h
src/tests/interop/io/: csv_format.cpp
src/tests/interop/logic/: channel_test.cpp  dynamic_phasing_logic_test.cpp  enum_parsing_test.cpp  image_table_logic_test.cpp  imaging_table_logic_test.cpp  imaging_table_regression_test.cpp  index_summary_test.cpp  metric_type_ext_test.cpp  plot_bar_test.cpp  plot_candle_stick_test.cpp  plot_flowcell_test.cpp  plot_heatmap_test.cpp  plot_logic_test.cpp  summary_metrics_test.cpp
src/tests/interop/metrics/: base_metric_tests.cpp  corrected_intensity_metrics_test.cpp  coverage_test.cpp  error_metrics_test.cpp  error_metrics_test2.cpp  extended_tile_metrics_test.cpp  extraction_metrics_test.cpp  image_metrics_test.cpp  index_metrics_test.cpp  metric_regression_tests.cpp  metric_stream_error_test.cpp  metric_streams_test.cpp  metric_test_utils.h  phasing_metrics_test.cpp  q_by_lane_metric_test.cpp  q_collapsed_metrics_test.cpp  q_metrics_test.cpp  run_metric_test.cpp  stream_exception_tests.hpp  summary_metrics_test.cpp  summary_run_metrics_test.cpp  (+1 more)
src/tests/python/: CMakeLists.txt  CoreTests.py  DepTests.py
(+2037 files in other folders)
